moving API requests to a propper controller
